# herdr-workflows

./: .gitignore  .oxfmtrc.json  AGENTS.md  LICENSE  README.md  bunfig.toml  herdr-plugin.toml  knip.json  package.json  tsconfig.json
.githooks/: pre-commit
docs/: examples.md  guide.md  index.md  reference.md  workflow.schema.json
rust/: Cargo.toml
rust/src/: config.rs  init.rs  lib.rs  main.rs  repo.rs
rust/src/herdr/: cli.rs  mod.rs  rpc.rs
rust/src/picker/: gate.rs  mod.rs  modes.rs  rows.rs  run.rs  text.rs
rust/src/runner/: agent_wait.rs  context.rs  deps.rs  dispatch.rs  fire.rs  inputs.rs  mod.rs  preflight.rs  runlog.rs  session.rs  shell.rs  spawn.rs
rust/src/web/: mod.rs  routes.rs  routes_files.rs  server.rs  yaml_build.rs
rust/src/workflow/: discover.rs  entry.rs  errors.rs  flatten.rs  inputs.rs  load.rs  mod.rs  parse.rs  placeholder.rs  recovery.rs  refine.rs  steps.rs  substitute.rs  types.rs
rust/tests/: golden_errors.rs  herdr_rpc.rs  init.rs  picker_modes.rs  picker_rows.rs  runner.rs  web_server.rs  web_yaml_build.rs  workflow_load.rs  workflow_parse.rs
rust/tests/golden/: errors.json
scripts/: generate-schema.ts  install-cli.mjs  install-keybindings.mjs
src/: cli-args.ts  cli.ts  cmd-init.ts  config.ts  context.ts  init.ts  pane-read.ts  playbook-scope.ts  repo.ts  runlog.ts  runner.ts  seed-workflows.ts  session.ts  workflows.ts
test/: config.test.ts  herdr-empirical.test.ts  init.test.ts  keybindings.test.ts  manage.test.ts  parse-workflow-text.test.ts  picker.test.ts  rpc.test.ts  runner.test.ts  schema.test.ts  (+7 more)
(+65 files in other folders)
