[package]
name = "herdr-workflows"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[[bin]]
name = "herdr-workflows"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
tui-input = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
schemars = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
wait-timeout = "0.2"
nix = { version = "0.30", features = ["process", "signal"] }
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }

# Lint policy per .kimi/skills/rust-skills rules/lint-*.md:
# correctness/suspicious denied, style/complexity/perf warned, pedantic cherry-picked.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
doc_markdown = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
wildcard_imports = "warn"
dbg_macro = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
